--- a/startup_matchmaker/css/style.css
+++ b/startup_matchmaker/css/style.css
@@ -92,22 +92,23 @@ strong {
 }
 
 .img-wrap {
-  background: url('http://i.imgur.com/yec1YVo.jpg') center center no-repeat;
+  background: url('http://i.imgur.com/yec1YVo.jpg');
+  background-repeat:no-repeat;
   background-size: cover;
   overflow: hidden;
   padding: 3%;
-  box-shadow: inset 0 0 5px rgba(0,0,0,.75);
+  box-shadow: 0px 0px 5px #888 inset;
+  background-color: rgba(0,0,0,.75);
 
 }
 
 .sidebar {
   float: right;
-  background: white;
   width: 34%;
-  opacity: .9;
   padding: 4%;
   margin: 0 auto;
-  box-shadow: 0 0 5px rgba(0,0,0,.75);
+  box-shadow: 0px 0px 5px #888 inset;
+  background-color: rgba(255,255,255,.75);
 }
 
 .button {
@@ -122,7 +123,7 @@ strong {
   display: block;
   text-align: center;
   padding: 12px;
-  box-shadow: inset 0 -3px 0 rgba(0,0,0,.2);
+  box-shadow: 0px 0px 5px #888 inset;
   border-radius: 5px;
   opacity: 1.0;
 }
